# nematostella_rosette_detection

./: .gitignore  README.md  Snakefile  pyproject.toml
config/: config.yml  curated_rosette_metadata.tsv  pipeline.yaml  sample_metadata.tsv
modules/downstream_analysis/: config.yaml
modules/downstream_analysis/rules/: constant_fed.smk  inhibitor.smk  timeseries.smk
modules/downstream_analysis/scripts/: advanced_cell_analysis.py  advanced_inhibitor_analysis.py  analyze_timeseries_variance.py  create_inhibitor_verification_plots.py  create_verification_plots.py  hierarchical_variance_analysis.py  summarize_inhibitor_variance.py
modules/image_segmentation/: config.yaml  pyproject.toml  pyproject_cellpose4.toml  rules.smk
modules/image_segmentation/scripts/: __init__.py  cellpose3.py  image_segmentations_controle_time_series.py  segment_cells.py
modules/inference_rosettes/: README.md  config.yaml  pyproject.toml  rules.smk
modules/inference_rosettes/scripts/: building_human_in_the_loop_files.py  create_pipeline_verification_files.py  pretrained_inference.py
modules/model_training/: README.md  config.yaml  pyproject.toml  rules.smk
modules/model_training/scripts/: create_experiment_summary.py  create_split.py  metrics.py  optimize_threshold.py  train_model.py  unet_attention_no_intensity.py  visualize_data.py
modules/reporting/: config.yaml  rules.smk
modules/reporting/rules/: report.smk
modules/reporting/scripts/: generate_report.py  report_template.html
modules/rosette_quantification/: README.md  config.yaml  pyproject.toml
modules/rosette_quantification/rules/: constant_fed.smk  inhibitor.smk  timeseries.smk
modules/rosette_quantification/scripts/: concatenate_results.py  helper_functions.py  process_inhibitor_sample.py  quantify_rosettes.py
modules/segmentation_post_processing/: config.yaml  plot_cell_outlines.py  pyproject.toml  rules.smk
modules/segmentation_post_processing/executing_scripts/: README.md  reproduce_curation_run.sh  run_curation.sh
modules/segmentation_post_processing/post_raw_segmentation_curration/: copy_raw_files.py  run_segmentation_curation.py  segmentation_curator.py
modules/segmentation_post_processing/scripts/: curate_segmentation.py
modules/training_data_preparation/: config.yaml  pyproject.toml  rules.smk
modules/training_data_preparation/scripts/: inspect_h5.py
scripts/: check_metadata_merge.py  curated_rosette_metadata_init_segmentation.py  generate_metadata.py  generate_metadata_rosette_predictions.py  gnerate_tsv_2.py  reconcile_metadata_ids.py  summarize_metadata.py
