[tool.poetry]
name = "rosette_quantification"
version = "0.1.0"
description = "Quantify rosette counts per 1000 cells from inference predictions"
authors = ["noahbruderer <noah.bruderer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.8.0"
scipy = "^1.11.0"
scikit-image = ">=0.22,<0.26.0"
numpy = "<2.0"
pandas = "^2.0.0"
seaborn = "^0.13.0"
tifffile = "^2023.0.0"
plotly = "^5.0.0"
networkx = "^3.0"
scikit-learn = "^1.7.2"
statsmodels = "^0.14.5"
weasyprint = "^66.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"